# motor

./: .gitmodules  CMakeLists.txt  Kconfig  prj.conf  readme.md  superlift_app.conf  west.yml  zephyr.dis
boards/arm/zgm_001/: Kconfig.board  Kconfig.motor  board.cmake  zgm_001.dts  zgm_001_defconfig
boards/arm/zgm_002/: Kconfig.zgm_002  zgm_002.dts
canard/: canard_if.c
drivers/: CMakeLists.txt
drivers/can/: CMakeLists.txt  stm32_can.c
drivers/currsmp/: CMakeLists.txt  currsmp_shunt_stm32.c  test_adc.c
drivers/feedback/: CMakeLists.txt  stm32_abz_hall.c  stm32_hall.c
drivers/pwm/: CMakeLists.txt  pwm_stm32.c  pwm_stm32_cube.c
drivers/svpwm/: svpwm_stm32.c
dts/bindings/currsmp/: st,stm32-currsmp-shunt.yaml
dts/bindings/foc/: foc.yaml
dts/bindings/motor/: motor_bldc.yaml
dts/bindings/pwm/: pwm_stm32.yaml
dts/bindings/svpwm/: st,stm32-svpwm.yaml
include/drivers/: currsmp.h  feedback.h  pwm.h  svpwm.h
include/lib/bldcmotor/: motor.h  motor_common.h
include/lib/foc/: foc.h
include/lib/focutils/svm/: svm.h
include/lib/focutils/utils/: focutils.h  utils.h
lib/: CMakeLists.txt  Kconfig
lib/bldcmotor/: CMakeLists.txt  Kconfig.motor  motor.c  motor_internal.c  motor_mode.c  motor_thread.c  super_thread.c
lib/foc/: foc.c
lib/foccmd/: foc_cmd.c
lib/focfsm/: focfsm.h
lib/focutils/: CMakeLists.txt
lib/focutils/svm/: svm.c
lib/utils/: Kconfig  stm32_adc.c  stm32_tim.c
modulestest/: main.c
src/: main.c
